--- a/www/index.html
+++ b/www/index.html
@@ -12,7 +12,7 @@
   <div class="push-right">
       <form id='settings' class='row collapse' target='hidden-iframe'>
         <div class='small-6 medium-8 large-10 columns'>
-          <input type='url' id='socket-url' name='socket-url' value="http://localhost:8088" required placeholder='url'>
+          <input type='url' id='socket-url' name='socket-url' value="http://127.0.0.1:8088" required placeholder='url'>
         </div>
         <div class='small-3 medium-2 large-1 columns'>
           <button type='submit' class='postfix button connect' type='submit' autofocus>Connect</button>
